Add ER diagrams (#552)

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ bandit = "~=1.6"
 coverage = "~=5.0"
 parameterized = "~=0.7"
 prospector = "==1.1.6.2" #  Our project only works with version 1.1.6.2
+django-extensions = "*"
 
 [packages]
 factory-boy = "~=2.12.0"
