--- a/Pipfile
+++ b/Pipfile
@@ -42,6 +42,8 @@ dataclasses = "~=0.6"
 # endesive = "~=1.5.9" (not included here as installed in a later jenkins step. Uncomment if working locally)
 pypdf2 = "~=1.26.0"
 pyOpenSSL = "~=19.1.0"
+sentry-sdk = "~=0.16" 
+elastic-apm = "~=5.8"
 
 [requires]
 python_version = "3.7"
