--- a/Pipfile
+++ b/Pipfile
@@ -41,6 +41,7 @@ notifications-python-client = "~=5.6.0"
 dataclasses = "*"
 sentry-sdk = "~=0.16" 
 elastic-apm = "~=5.8"
+django-staff-sso-client = "~=1.0.0"
 
 [requires]
 python_version = "3.7"
