--- a/local.env
+++ b/local.env
@@ -65,3 +65,5 @@ CERTIFICATE_PASSWORD=CERTIFICATE_PASSWORD
 SIGNING_EMAIL=SIGNING_EMAIL
 SIGNING_LOCATION=SIGNING_LOCATION
 SIGNING_REASON=SIGNING_REASON
+
+PERMISSIONS_FINDER_URL='' # required for accessing exporter lite content, can be empty string
