--- a/Pipfile
+++ b/Pipfile
@@ -41,6 +41,8 @@ notifications-python-client = "~=5.6.0"
 dataclasses = "*"
 sentry-sdk = "~=0.16" 
 elastic-apm = "~=5.8"
+django-elasticsearch-dsl-drf = "*"
+django-elasticsearch-dsl = "*"
 
 [requires]
 python_version = "3.7"
