Add missing setting

--- a/local.env
+++ b/local.env
@@ -38,6 +38,7 @@ UPLOAD_DOCUMENT_ENDPOINT_ENABLED=False
 
 DJANGO_SECRET_KEY=DJANGO_SECRET_KEY
 
+PERMISSIONS_FINDER_URL=
 HAWK_AUTHENTICATION_ENABLED=False
 LITE_EXPORTER_HAWK_KEY=LITE_EXPORTER_HAWK_KEY
 LITE_INTERNAL_HAWK_KEY=LITE_INTERNAL_HAWK_KEY
