Use Procfile instead of runserver

--- a/Pipfile
+++ b/Pipfile
@@ -45,8 +45,10 @@ pyOpenSSL = "~=19.1.0"
 sentry-sdk = "~=0.16" 
 elastic-apm = "~=5.8"
 django-staff-sso-client = "~=1.0.0"
-django-elasticsearch-dsl-drf = "*"
-django-elasticsearch-dsl = "*"
+django-elasticsearch-dsl-drf = "~=0.20"
+django-elasticsearch-dsl = "~=7.1"
+gunicorn = "~=20.0"
+gevent = "~=20.6"
 
 [requires]
 python_version = "3.7"
