LTD-180: Read demo_flags, demo_queues and demo_teams from Vault

--- a/local.env
+++ b/local.env
@@ -68,3 +68,8 @@ SIGNING_LOCATION=SIGNING_LOCATION
 SIGNING_REASON=SIGNING_REASON
 
 PERMISSIONS_FINDER_URL='' # required for accessing exporter lite content, can be empty string
+
+# seed data
+LITE_API_DEMO_FLAGS_CSV="field\nteam1\nteam2"
+LITE_API_DEMO_QUEUES_CSV="field\nteam1\nteam2"
+LITE_API_DEMO_TEAMS_CSV="field\nteam1\nteam2"
