Update gunicorn path after refactor changes

--- a/.coveragerc
+++ b/.coveragerc
@@ -6,8 +6,8 @@ omit =
     ./*/__init__.py
     ./*/models.py
     ./*/migrations/*
-    ./conf/settings.py
-    ./conf/wsgi.py
+    ./api/conf/settings.py
+    ./api/conf/wsgi.py
     ./static/management/*
     *test*
     .venv/*
