--- a/local.env
+++ b/local.env
@@ -1,7 +1,13 @@
 DEBUG=True
-DATABASE_URL=postgres://postgres:password@localhost:5432/postgres
+
+# update username/password to match your local configuration
+DATABASE_URL=postgres://postgres:password@localhost:5432/lite-api
+
+# Comment above and uncomment below for running in docker
+#DATABASE_URL=postgres://postgres:password@db:5432/lite-api
+
 PORT=8100
-ALLOWED_HOSTS=["*"]
+ALLOWED_HOSTS=*
 
 # SEED USERS
 INTERNAL_USERS=[{"email": "", "role": "Super User"}]
@@ -38,7 +44,6 @@ UPLOAD_DOCUMENT_ENDPOINT_ENABLED=False
 
 DJANGO_SECRET_KEY=DJANGO_SECRET_KEY
 
-PERMISSIONS_FINDER_URL=
 HAWK_AUTHENTICATION_ENABLED=False
 LITE_EXPORTER_HAWK_KEY=LITE_EXPORTER_HAWK_KEY
 LITE_INTERNAL_HAWK_KEY=LITE_INTERNAL_HAWK_KEY
