Add CLC filtering

--- a/local.env
+++ b/local.env
@@ -78,3 +78,5 @@ PERMISSIONS_FINDER_URL='' # required for accessing exporter lite content, can be
 LITE_API_DEMO_FLAGS_CSV="field\nteam1\nteam2"
 LITE_API_DEMO_QUEUES_CSV="field\nteam1\nteam2"
 LITE_API_DEMO_TEAMS_CSV="field\nteam1\nteam2"
+
+ELASTICSEARCH_HOST=http://localost:9200
