--- a/Pipfile
+++ b/Pipfile
@@ -49,6 +49,7 @@ django-elasticsearch-dsl-drf = "~=0.20"
 django-elasticsearch-dsl = "~=7.1"
 gunicorn = "~=20.0"
 gevent = "~=20.6"
+bleach = "*"
 
 [requires]
 python_version = "3.7"
