--- a/Pipfile
+++ b/Pipfile
@@ -49,7 +49,8 @@ django-elasticsearch-dsl-drf = "~=0.20"
 django-elasticsearch-dsl = "~=7.1"
 gunicorn = "~=20.0"
 gevent = "~=20.6"
-bleach = "*"
+bleach = "~=3.2"
+django-health-check = "~=3.14.3"
 
 [requires]
 python_version = "3.7"
