--- a/manifest.yml
+++ b/manifest.yml
@@ -4,3 +4,5 @@ applications:
       - python_buildpack
     timeout: 360
     memory: 1G
+    health-check-type: http
+    health-check-http-endpoint: /healthcheck/
