--- a/Pipfile
+++ b/Pipfile
@@ -51,6 +51,7 @@ gunicorn = "~=20.0"
 gevent = "~=20.6"
 bleach = "~=3.2"
 django-health-check = "~=3.14.3"
+django-allow-cidr = "~=0.3"
 
 [requires]
 python_version = "3.7"
