--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,45 @@ services:
     command: ./manage.py runserver 0.0.0.0:${PORT:-8100}
     networks:
       - lite
+  # Elasticsearch Docker Images: https://www.docker.elastic.co/
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.9.3
+    container_name: elasticsearch
+    environment:
+      - xpack.security.enabled=false
+      - xpack.ml.enabled=false
+      - discovery.type=single-node
+      - ES_JAVA_OPTS="-Xms128mb -Xmx1g"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    cap_add:
+      - IPC_LOCK
+    volumes:
+      - elasticsearch-data:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+      - 9300:9300
+    networks:
+      - lite
+
+  redis:
+    image: "redis:5-alpine"
+    container_name: redis
+    expose:
+      - 6379
+    ports:
+      - 6379:6379
+    networks:
+      - lite
 
 networks:
   lite:
     external: true
+volumes:
+  elasticsearch-data:
+    driver: local
