--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ django-extensions = "*"
 django-coverage-plugin = "*"
 requests-mock = "~=1.8"
 freezegun = "~=1.0.0"
+pytest = "*"
+pytest-django = "*"
 
 [packages]
 factory-boy = "~=2.12.0"
