--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ verify_ssl = true
 
 [dev-packages]
 black = "==19.10b0"
-bandit = "~=1.6"
+bandit = "==1.6.2"
 coverage = "~=5.0"
 parameterized = "~=0.7"
 prospector = "==1.1.6.2" #  Our project only works with version 1.1.6.2
