--- a/Pipfile
+++ b/Pipfile
@@ -34,7 +34,7 @@ python-json-logger = "~=0.1"
 requests-toolbelt = "~=0.9"
 tblib = "~=1.6"
 weasyprint = "~=51.0"
-django-separatedvaluesfield = "~=0.6.0"
+django-separatedvaluesfield = {editable = true, git = "https://github.com/ulule/django-separatedvaluesfield.git", ref = "750d212"}
 defusedxml = "~=0.6.0"
 xmlschema = "~=1.2.0"
 notifications-python-client = "~=5.6.0"
