--- a/.pylintrc
+++ b/.pylintrc
@@ -7,7 +7,7 @@
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=Pipfile.lock
+ignore=Pipfile.lock,vendor
 
 # Pickle collected data for later comparisons.
 persistent=no
