--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ jobs:
 
       - run:
           name: Run tests
-          command: pipenv run ./manage.py test --parallel 8 --exclude-tag=seeding --exclude-tag=performance
+          command: pipenv run ./manage.py test --parallel 8 --exclude-tag=seeding --exclude-tag=performance --exclude-tag=elasticsearch
       - store_test_results:
           path: test-results
 
