--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ parameterized = "~=0.7"
 prospector = "==1.1.6.2" #  Our project only works with version 1.1.6.2
 django-extensions = "*"
 django-coverage-plugin = "*"
+requests-mock = "~=1.8"
+freezegun = "~=1.0.0"
 
 [packages]
 factory-boy = "~=2.12.0"
