--- a/Pipfile
+++ b/Pipfile
@@ -55,6 +55,9 @@ gevent = "~=20.6"
 bleach = "~=3.2"
 django-health-check = "~=3.14.3"
 django-allow-cidr = "~=0.3"
+xmltodict = "~=0.12.0"
+pyexcel = "==0.6.6"
+pyexcel-ods3 = "*"
 
 [requires]
 python_version = "3.7.9"
