--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,5 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = api.conf.settings
+env = 
+	ELASTICSEARCH_SANCTION_INDEX_ALIAS=sanctions-alias-test
+	ELASTICSEARCH_DENIALS_INDEX_ALIAS=denials-alias-test
