--- a/Pipfile
+++ b/Pipfile
@@ -36,7 +36,7 @@ django-staff-sso-client = "~=3.1"
 djangorestframework = "~=3.12"
 markdown = "~=3.1"
 mohawk = ">=1.1"
-openpyxl = "~=3.0"
+openpyxl = "==3.0.6"
 packaging = "~=19.0"
 psycopg2 = "~=2.8"
 python-json-logger = "~=0.1"
