--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,9 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = api.conf.settings
+DJANGO_SETTINGS_MODULE = api.conf.settings_test
 env = 
 	ELASTICSEARCH_SANCTION_INDEX_ALIAS=sanctions-alias-test
 	ELASTICSEARCH_DENIALS_INDEX_ALIAS=denials-alias-test
+markers =
+	elasticsearch: Tests that use elasticsearch
+	seeding: tests that check seed commands
+	performance: tests that check performance
