--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ parameterized = "~=0.7"
 prospector = "==1.1.6.2" #  Our project only works with version 1.1.6.2
 django-extensions = "*"
 django-coverage-plugin = "*"
+pytest-cov = "~=2.10.0"
 requests-mock = "~=1.8"
 freezegun = "~=1.0.0"
 pytest = "*"
