Add django phonenumber field package

--- a/Pipfile
+++ b/Pipfile
@@ -32,6 +32,7 @@ django-environ = "~=0.4"
 django-jsonfield = "~=1.4"
 django-health-check = "~=3.16"
 django-model-utils = "~=4.1"
+django-phonenumber-field = "~=5.0.0"
 django-sortedm2m = "~=3.0"
 django-staff-sso-client = "~=3.1"
 djangorestframework = "~=3.12"
@@ -39,6 +40,7 @@ markdown = "~=3.1"
 mohawk = ">=1.1"
 openpyxl = "==3.0.6"
 packaging = "~=19.0"
+phonenumbers = "~=8.12.21"
 psycopg2 = "~=2.8"
 python-json-logger = "~=0.1"
 requests-toolbelt = "~=0.9"
