--- a/Pipfile
+++ b/Pipfile
@@ -22,7 +22,7 @@ factory-boy = "~=2.12.0"
 unittest-xml-reporting = "~=2.5"
 faker = "~=4.0"
 boto3 = "~=1.11"
-Django = "~=3.1"
+Django = "~=3.1.8"
 django-activity-stream = "~=0.10"
 django-allow-cidr = "~=0.3"
 django-background-tasks = "~=1.2"
@@ -32,7 +32,6 @@ django-environ = "~=0.4"
 django-jsonfield = "~=1.4"
 django-health-check = "~=3.16"
 django-model-utils = "~=4.1"
-django-phonenumber-field = "~=5.0.0"
 django-sortedm2m = "~=3.0"
 django-staff-sso-client = "~=3.1"
 djangorestframework = "~=3.12"
@@ -40,7 +39,6 @@ markdown = "~=3.1"
 mohawk = ">=1.1"
 openpyxl = "==3.0.6"
 packaging = "~=19.0"
-phonenumbers = "~=8.12.21"
 psycopg2 = "~=2.8"
 python-json-logger = "~=0.1"
 requests-toolbelt = "~=0.9"
@@ -62,6 +60,8 @@ xmltodict = "~=0.12.0"
 pyexcel = "==0.6.6"
 pyexcel-ods3 = "*"
 Pillow = ">8.1.0,<8.2"
+django-phonenumber-field = "==5.0.0"
+phonenumbers = "~=8.12"
 
 [requires]
 python_version = "3.7"
