Minor changes to make initial seedall instructions easier to follow

--- a/local.env
+++ b/local.env
@@ -5,6 +5,8 @@ DATABASE_URL=postgres://postgres:password@localhost:5432/lite-api
 
 # Comment above and uncomment below for running in docker
 #DATABASE_URL=postgres://postgres:password@db:5432/lite-api
+#HAWK_LITE_DATA_WORKSPACE_KEY=dummy_value
+
 
 PORT=8100
 ALLOWED_HOSTS=*
@@ -73,10 +75,5 @@ SIGNING_LOCATION=SIGNING_LOCATION
 SIGNING_REASON=SIGNING_REASON
 
 PERMISSIONS_FINDER_URL='' # required for accessing exporter lite content, can be empty string
-
-# seed data
-LITE_API_DEMO_FLAGS_CSV="field\nteam1\nteam2"
-LITE_API_DEMO_QUEUES_CSV="field\nteam1\nteam2"
-LITE_API_DEMO_TEAMS_CSV="field\nteam1\nteam2"
 
 ELASTICSEARCH_HOST=http://localost:9200
