--- a/local.env
+++ b/local.env
@@ -5,8 +5,6 @@ DATABASE_URL=postgres://postgres:password@localhost:5462/lite-api
 
 # Comment above and uncomment below for running in docker
 #DATABASE_URL=postgres://postgres:password@db:5432/lite-api
-#HAWK_LITE_DATA_WORKSPACE_KEY=dummy_value
-
 
 PORT=8100
 ALLOWED_HOSTS=*
@@ -47,6 +45,7 @@ UPLOAD_DOCUMENT_ENDPOINT_ENABLED=False
 DJANGO_SECRET_KEY=DJANGO_SECRET_KEY
 
 HAWK_AUTHENTICATION_ENABLED=False
+HAWK_LITE_DATA_WORKSPACE_KEY=dummy_value
 LITE_EXPORTER_HAWK_KEY=LITE_EXPORTER_HAWK_KEY
 LITE_INTERNAL_HAWK_KEY=LITE_INTERNAL_HAWK_KEY
 LITE_E2E_HAWK_KEY=LITE_E2E_HAWK_KEY
