--- a/Pipfile
+++ b/Pipfile
@@ -35,6 +35,7 @@ django-model-utils = "~=4.1"
 django-sortedm2m = "~=3.0"
 django-staff-sso-client = "~=3.1"
 djangorestframework = "~=3.12"
+elasticsearch = "<7.14.0"
 markdown = "~=3.1"
 mohawk = ">=1.1"
 openpyxl = "==3.0.6"
