Feature flag compliance case creation for SIELs

--- a/local.env
+++ b/local.env
@@ -76,3 +76,5 @@ SIGNING_REASON=SIGNING_REASON
 PERMISSIONS_FINDER_URL='' # required for accessing exporter lite content, can be empty string
 
 ELASTICSEARCH_HOST=http://localost:9200
+
+FEATURE_SIEL_COMPLIANCE_ENABLED=False
