Add to pytest.ini:  -k 'not seeding and not elasticsearch and not performance'

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,8 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = api.conf.settings_test
-env = 
+addopts =
+  -k "not seeding and not elasticsearch and not performance"
+env =
 	ELASTICSEARCH_SANCTION_INDEX_ALIAS=sanctions-alias-test
 	ELASTICSEARCH_DENIALS_INDEX_ALIAS=denials-alias-test
 markers =
