--- a/Pipfile
+++ b/Pipfile
@@ -65,6 +65,8 @@ phonenumbers = "~=8.12"
 django-log-formatter-ecs = "==0.0.5"
 whitenoise = "~=5.0"
 django-audit-log-middleware = "*"
+django-extensions = "*"
+ipython = "*"
 
 [requires]
 python_version = "3.7"
