--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,17 @@ services:
     networks:
       - lite
 
+  lite-minio-s3:
+    image: minio/minio:RELEASE.2020-10-28T08-16-50Z-29-g07d7dd632
+    environment:
+      MINIO_ACCESS_KEY: AKIAIEXAMPLE
+      MINIO_SECRET_KEY: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+      MINIO_REGION: eu-west-2
+    ports:
+      - "9000:9000"
+    entrypoint: sh
+    command: ['-c', 'mkdir -p /data/my-bucket && minio server /data']
+
   api:
     env_file:
       - .env
@@ -23,6 +34,7 @@ services:
       - 8100:8100
     links:
       - db
+      - lite-minio-s3
     expose:
       - 8100
     command: ./manage.py runserver 0.0.0.0:${PORT:-8100}
