--- a/local.env
+++ b/local.env
@@ -28,6 +28,7 @@ AWS_ACCESS_KEY_ID=AWS_ACCESS_KEY_ID
 AWS_SECRET_ACCESS_KEY=AWS_SECRET_ACCESS_KEY
 AWS_STORAGE_BUCKET_NAME=AWS_STORAGE_BUCKET_NAME
 AWS_REGION=eu-west-2
+S3_LOCAL_ENDPOINT_URL=
 
 # AV
 AV_SERVICE_URL=AV_SERVICE_URL
