--- a/Dockerfile.e2e
+++ b/Dockerfile.e2e
@@ -9,7 +9,7 @@ RUN apt-get update --fix-missing
 RUN apt-get install -y libpq-dev gcc \
   build-essential python3-dev python3-pip python3-setuptools python3-wheel \
   python3-cffi libcairo2 libpango-1.0-0 libpangocairo-1.0-0 libgdk-pixbuf2.0-0 \
-  libffi-dev shared-mime-info swig
+  libffi-dev shared-mime-info swig wget
 
 # Install dockerize
 RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
