--- a/Dockerfile.e2e
+++ b/Dockerfile.e2e
@@ -33,6 +33,6 @@ RUN apt-get install -y git
 RUN rm -rf lite_content/
 RUN git clone https://$GIT_ACCESS_CODE@github.com/uktrade/lite-content.git
 RUN mkdir lite_content
-RUN cp -r lite-content/ lite_content/
+RUN cp -r lite-content/* lite_content/
 
 CMD ./start-e2e.sh
