Update start command

--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -8,7 +8,9 @@ services:
       - db
       - elasticsearch
       - redis
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.e2e
     volumes:
       - .:/app
     ports:
