--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
     - repo: https://github.com/psf/black
-      rev: 22.1.0
+      rev: 22.3.0
       hooks:
           - id: black
           # Config for black lives in pyproject.toml
@@ -8,7 +8,7 @@ repos:
       rev: v1.12.1
       hooks:
           - id: blacken-docs
-            additional_dependencies: [black==22.1.0]
+            additional_dependencies: [black==22.3.0]
     - repo: https://github.com/pre-commit/pre-commit-hooks
       rev: v4.1.0
       hooks:
@@ -38,6 +38,7 @@ repos:
             args: [--exclude=pii-secret-exclude.txt]
             pass_filenames: true
             require_serial: true
+            additional_dependencies: [click==8.0.4]
           #- id: hooks_version_check
           #  name: Checking local hooks against latest release
           #  verbose: true
