Add lite db dockerfile

--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -18,11 +18,12 @@ services:
     expose:
       - 8100
     command: /app/start-e2e.sh
+    entrypoint: dockerize -wait tcp://db:5432
     stdin_open: true
     tty: true
 
   db:
-    image: "postgres"
+    image: gcr.io/sre-docker-registry/lite-db:latest
     environment:
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=lite-api
