--- a/Pipfile
+++ b/Pipfile
@@ -67,6 +67,7 @@ django-audit-log-middleware = "*"
 django-extensions = "*"
 ipython = "*"
 importlib-metadata = "==4.8.1"  # Not needed for Python3.8+
-
+pyexcel = "~=0.7"
+pyexcel-ods3 = "*"
 [requires]
 python_version = "3.7"
