Initial integration with celery for async tasks

--- a/ci.env
+++ b/ci.env
@@ -1,6 +1,7 @@
 DEBUG=True
 # update username/password to match your local configuration
 DATABASE_URL=postgres://postgres:password@db:5432/lite-api
+REDIS_BASE_URL=redis://redis:6379
 # Comment above and uncomment below for running in docker
 PORT=8100
 ALLOWED_HOSTS=*
