--- a/local.env
+++ b/local.env
@@ -21,6 +21,7 @@ EXPORTER_USERS=[{"email": "", "organisation": "Archway Communications", "role": 
 # to the EXPORTER_USERS variable
 # Although, if you wish to specify what organisation or role they have as an exporter,
 # you will need to add them to EXPORTER_USERS and specify that information there
+REDIS_BASE_URL=redis://localhost:6379
 
 
 # AWS
