--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -22,6 +22,24 @@ services:
     stdin_open: true
     tty: true
 
+  celery:
+    build: .
+    volumes:
+      - .:/app
+    env_file: .env
+    links:
+      - db
+      - redis
+    depends_on:
+      - api
+      - db
+      - elasticsearch
+      - redis
+    entrypoint: dockerize -wait tcp://db:5432 -wait tcp://api:8100
+    command: celery -A api.conf worker -l info
+    networks:
+      - lite
+
   db:
     image: gcr.io/sre-docker-registry/lite-db:latest
     environment:
