--- a/Pipfile
+++ b/Pipfile
@@ -68,8 +68,8 @@ django-audit-log-middleware = "*"
 django-extensions = "*"
 ipython = "*"
 importlib-metadata = "==4.8.1"  # Not needed for Python3.8+
-celery = "*"
-redis = "*"
+celery = "~=5.2.7"
+redis = "~=4.0.2"
 
 [requires]
 python_version = "3.7"
