--- a/Dockerfile.e2e
+++ b/Dockerfile.e2e
@@ -29,10 +29,16 @@ ADD . /app
 RUN apt-get update --fix-missing
 RUN apt-get install -y git
 
-# Clean up submodule and pull it down 
+# Clean up lite-content submodule and pull it down
 RUN rm -rf lite_content/
 RUN git clone https://$GIT_ACCESS_CODE@github.com/uktrade/lite-content.git
 RUN mkdir lite_content
 RUN cp -r lite-content/* lite_content/
+
+# Clean up lite-routing submodule and pull it down
+RUN rm -rf lite_routing/
+RUN git clone https://$GIT_ACCESS_CODE@github.com/uktrade/lite-routing.git
+RUN mkdir lite_routing
+RUN cp -r lite-routing/* lite_routing/
 
 CMD ./start-e2e.sh
