--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ requests-mock = "~=1.8"
 freezegun = "~=1.0.0"
 pytest = "*"
 pytest-django = "*"
+pytest-bdd = "*"
 ipdb = "*"
 watchdog = {extras = ["watchmedo"], version = "*"}
 
