--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,9 @@ image_elasticsearch: &image_elasticsearch
     xpack.watcher.enabled: "false"
     transport.host: "localhost"
 
+image_redis: &image_redis
+  image: circleci/redis:3.2-alpine
+
 commands:
   setup:
     steps:
@@ -63,6 +66,7 @@ jobs:
       - <<: *image_python
       - <<: *image_postgres
       - <<: *image_elasticsearch
+      - <<: *image_redis
     working_directory: ~/lite-api
     environment:
       <<: *common_env_vars
