--- a/Pipfile
+++ b/Pipfile
@@ -43,7 +43,6 @@ markdown = "~=3.1"
 mohawk = ">=1.1"
 openpyxl = "==3.0.6"
 packaging = "~=19.0"
-psycopg2 = "~=2.8"
 requests-toolbelt = "~=0.9"
 tblib = "~=1.6"
 weasyprint = "~=51.0"
@@ -71,6 +70,7 @@ ipython = "*"
 importlib-metadata = "==4.8.1"  # Not needed for Python3.8+
 celery = "~=5.2.7"
 redis = "~=4.0.2"
+psycopg2-binary = "~=2.9.3"
 
 [requires]
 python_version = "3.7"
