Enable Open search when running tests on CI
One of the routing test related to DN requires Open search enabled to work

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ jobs:
     working_directory: ~/lite-api
     environment:
       <<: *common_env_vars
-      LITE_API_ENABLE_ES: False
+      LITE_API_ENABLE_ES: True
     steps:
       - setup
       - run:
