--- a/Pipfile
+++ b/Pipfile
@@ -52,7 +52,8 @@ notifications-python-client = "~=5.7.1"
 dataclasses = "~=0.6"
 # endesive = "~=1.5.9" (not included here as installed in a later jenkins step. Uncomment if working locally)
 pypdf2 = "~=1.27.5"
-pyOpenSSL = "~=22.0.0"
+pyOpenSSL = "~=19.1.0"
+cryptography = "~=37.0.4"
 sentry-sdk = "~=0.16"
 elastic-apm = "~=6.7.2"
 gunicorn = "~=20.0"
