Run lite routing BDD tests in parallel to unit tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,9 +133,27 @@ jobs:
     steps:
       - setup
       - run:
-          name: Run lite_routing BDD tests
+          name: Run lite_routing tests
           command: |
-            pipenv run pytest --cov=. --cov-report xml --cov-config=.coveragerc lite_routing
+            pipenv run pytest --cov=. --cov-report xml --cov-config=.coveragerc --ignore lite_routing/routing_rules_internal/tests/bdd lite_routing
+      - upload_code_coverage
+
+  lite_routing_bdd_tests:
+    docker:
+      - <<: *image_python
+      - <<: *image_postgres
+      - <<: *image_elasticsearch
+      - <<: *image_redis
+    working_directory: ~/lite-api
+    environment:
+      <<: *common_env_vars
+      LITE_API_ENABLE_ES: True
+    steps:
+      - setup
+      - run:
+          name: Run lite_routing tests
+          command: |
+            pipenv run pytest --cov=. --cov-report xml --cov-config=.coveragerc lite_routing/routing_rules_internal/tests/bdd
       - upload_code_coverage
 
   elastic_search_tests:
@@ -210,6 +228,7 @@ workflows:
       - tests
       - seeding_tests
       - lite_routing_tests
+      - lite_routing_bdd_tests
       - elastic_search_tests
       - check_migrations
       - linting
