--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,9 @@ commands:
           key: dependencies-v1-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
       - run:
           name: Install OS libraries
-          command: sudo apt-get install swig;
+          command: |
+            sudo apt-get update
+            sudo apt-get install swig
       - run:
           name: Install Dependencies
           command: pipenv sync --dev
@@ -203,7 +205,9 @@ jobs:
           key: dependencies-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
       - run:
           name: Install OS libraries
-          command: sudo apt-get install swig;
+          command: |
+            sudo apt-get update
+            sudo apt-get install swig
       - run:
           name: Install Dependencies
           command: pipenv sync --dev
