--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,17 @@ parameters:
     default: "default"
 
 commands:
+  install_os_libraries:
+    steps:
+      - run:
+          name: Install OS libraries
+          command: |
+            sudo apt-get update
+            sudo apt-get install swig
+            sudo apt-get install libpango1.0-0
+            sudo apt-get install libcairo2
+            sudo apt-get install libpq-dev
+
   setup:
     steps:
       - checkout
@@ -64,11 +75,7 @@ commands:
       # ensure this step occurs *before* installing dependencies
       - restore_cache:
           key: dependencies-v1-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
-      - run:
-          name: Install OS libraries
-          command: |
-            sudo apt-get update
-            sudo apt-get install swig
+      - install_os_libraries
       - run:
           name: Install Dependencies
           command: pipenv sync --dev
@@ -81,6 +88,7 @@ commands:
           paths:
             - ./.venv
           key: dependencies-v1-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+
   upload_code_coverage:
     steps:
       - run:
@@ -203,11 +211,7 @@ jobs:
             git submodule update --init
       - restore_cache:
           key: dependencies-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
-      - run:
-          name: Install OS libraries
-          command: |
-            sudo apt-get update
-            sudo apt-get install swig
+      - install_os_libraries
       - run:
           name: Install Dependencies
           command: pipenv sync --dev
