--- a/.coveragerc
+++ b/.coveragerc
@@ -14,6 +14,7 @@ omit =
     vendor/*
     ./pii-secret-exclude.txt
     ./api/staticdata/management/*
+    ./runtime.txt
 branch = True
 
 plugins =
