--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 applications:
   - buildpacks:
       - https://github.com/cloudfoundry/apt-buildpack.git
-      - https://github.com/cloudfoundry/python-buildpack.git#v1.7.58
+      - python_buildpack
     timeout: 360
     memory: 1G
     health-check-type: http
